--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 应用名称
 spring.application.name=springcloudAlibaba
 # 应用服务 WEB 访问端口
-server.port=8080
+server.port=9080
 # Sentinel 控制台地址
 spring.cloud.sentinel.transport.dashboard=localhost:8080
 # 取消Sentinel控制台懒加载
@@ -12,3 +12,9 @@ spring.cloud.sentinel.eager=true
 # spring.cloud.sentinel.transport.client-ip=
 
 
+#整合nacos下发配置
+spring.cloud.sentinel.datasource.ds.nacos.server-addr=localhost:8848
+spring.cloud.sentinel.datasource.ds.nacos.data-id=stn
+spring.cloud.sentinel.datasource.ds.nacos.group-id=DEFAULT_GROUP
+
+spring.cloud.sentinel.datasource.ds.nacos.rule-type=flow
