--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
-        <spring-cloud-alibaba.version>2.2.2.RELEASE</spring-cloud-alibaba.version>
+        <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
+<!--        <spring-cloud-alibaba.version>2.2.2.RELEASE</spring-cloud-alibaba.version>-->
+
     </properties>
 
     <dependencies>
@@ -24,6 +26,13 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+<!--            <version>2.2.1.RELEASE</version>-->
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+<!--            <version>1.7.1</version>-->
         </dependency>
 
         <dependency>
