--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-# 整合nacos注册中心
+# sentinel整合nacos下发限流配置
 
 # 应用名称
-spring.application.name=provider
+spring.application.name=springcloudAlibaba
 # 应用服务 WEB 访问端口
-server.port=7090
+server.port=9080
 # Sentinel 控制台地址
 spring.cloud.sentinel.transport.dashboard=localhost:8080
 # 取消Sentinel控制台懒加载
@@ -13,4 +13,10 @@ spring.cloud.sentinel.eager=true
 # 如果有多套网络，又无法正确获取本机IP，则需要使用下面的参数设置当前机器可被外部访问的IP地址，供admin控制台使用
 # spring.cloud.sentinel.transport.client-ip=
 
-spring.cloud.nacos.discovery.server-addr=localhost:8848
+
+#整合nacos下发配置
+spring.cloud.sentinel.datasource.ds.nacos.server-addr=localhost:8848
+spring.cloud.sentinel.datasource.ds.nacos.data-id=stn
+spring.cloud.sentinel.datasource.ds.nacos.group-id=DEFAULT_GROUP
+
+spring.cloud.sentinel.datasource.ds.nacos.rule-type=flow
