--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,11 @@ spring.cloud.sentinel.eager=true
 
 
 #整合nacos下发配置
-spring.cloud.sentinel.datasource.ds.nacos.server-addr=localhost:8848
+spring.cloud.sentinel.datasource.ds.nacos.server-addr=node01:8848
 spring.cloud.sentinel.datasource.ds.nacos.data-id=stn
 spring.cloud.sentinel.datasource.ds.nacos.group-id=DEFAULT_GROUP
 
 spring.cloud.sentinel.datasource.ds.nacos.rule-type=flow
+
+#注册中心
+spring.cloud.nacos.discovery.server-addr=node01:8848
